src/objects/BHAT_Activity_Note__c.object
<CustomObject>
    <description>BHAT Sub Categories</description>
    <fields>
        <fullName>Activity_Note_Description__c</fullName>
        <description>Activity Note Description</description>
        <label>Activity Note Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Code__c</fullName>
        <description>Activity Code</description>
        <label>BHAT Activity Code</label>
        <referenceTo>BHAT_Activity_Code__c</referenceTo>
        <relationshipName>BHAT_Activity_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <formula>IF(CONTAINS(  LOWER(Name)  , &apos;other&apos; ), 99, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Sequence__c</fullName>
        <label>Sort Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Until_Date__c</fullName>
        <label>Valid Until Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>BHAT Sub Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BHAT_Activity_Code__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Activity Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BHAT  Sub Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>